opam-version: "1.2"

name: "exenum"
version: "0.81"

author: "Didier Le Botlan <github.lebotlan@dfgh.net>"

homepage: "https://github.com/lebotlan/ocaml-exenum"
bug-reports: "https://github.com/lebotlan/ocaml-exenum/issues"
dev-repo: "git://github.com/lebotlan/ocaml-exenum"

license: "MIT License"

build: [ [make] ]

depends: [
         "ocamlfind"
         "jbuilder"
         ]


