opam-version: "1.2"

name: "exenum"
version: "0.81"

author: "Didier Le Botlan <github.lebotlan@dfgh.net>"

homepage: "https://github.com/lebotlan/ocaml-exenum"
bug-reports: "https://github.com/lebotlan/ocaml-exenum/issues"
dev-repo: "git://github.com/lebotlan/ocaml-exenum.git"

license: "MIT License"

depends: [
         "ocamlfind"
         "jbuilder"
         ]

build: [["jbuilder" "build" "-p" name "-j" jobs]]
