opam-version: "1.2"

name: "exenum"
version: "0.84"

author: "Didier Le Botlan <github.lebotlan@dfgh.net>"
maintainer: "Didier Le Botlan <github.lebotlan@dfgh.net>"

homepage: "https://github.com/lebotlan/ocaml-exenum"
bug-reports: "https://github.com/lebotlan/ocaml-exenum/issues"
dev-repo: "git://github.com/lebotlan/ocaml-exenum.git"

license: "MIT License"

depends: [
         "jbuilder"
         "zarith"
         ]

depopts: [
          "lwt"
          ]

available: [ ocaml-version >= "4.02.3" ]

build: [["jbuilder" "build" "-p" name "-j" jobs]]
